--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=stock-control-api
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/stock_control_db
+spring.datasource.url=jdbc:postgresql://db.ppuvmtxdjvotmnkpruya.supabase.co:5432/postgres?sslmode=require
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=Senha@141719
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
