--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-spring.application.name=stock-control-api
-server.port=8080
-
-spring.datasource.url=jdbc:postgresql://db.ppuvmtxdjvotmnkpruya.supabase.co:5432/postgres?sslmode=require
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://aws-0-us-west-2.pooler.supabase.com:6543/postgres?sslmode=require
+spring.datasource.username=ppostgres.yoyiihcvzveqiobospxe
 spring.datasource.password=Senha@141719
 spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -12,3 +9,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jackson.default-property-inclusion=non_null
+
+server.port=${PORT:8080}
