--- a/application.yml
+++ b/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    url: jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:5432/postgres?sslmode=require
-    username: postgres.lxredutwjysoqosvtgom
+    url: jdbc:postgresql://aws-0-us-west-2.pooler.supabase.com:6543/postgres?sslmode=require&prepareThreshold=0
+    username: postgres.yoyiihcvzveqiobospxe
     password: Senha@141719
     driver-class-name: org.postgresql.Driver
 
@@ -9,3 +9,7 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
