--- a/application.yml
+++ b/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:postgresql://aws-0-us-west-2.pooler.supabase.com:6543/postgres?sslmode=require&prepareThreshold=0
     username: postgres.yoyiihcvzveqiobospxe
-    password: Senha@141719
+    password: DoRcC27HE6bTPYI3
     driver-class-name: org.postgresql.Driver
 
   jpa:
