--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://aws-0-us-west-2.pooler.supabase.com:6543/postgres?sslmode=require
 spring.datasource.username=ppostgres.yoyiihcvzveqiobospxe
-spring.datasource.password=Senha@141719
+spring.datasource.password=DoRcC27HE6bTPYI3
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
