--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://dpg-d6ad0gq48b3s73bri5v0-a.oregon-postgres.render.com:5432/stockcontrol_7io2?sslmode=require
-spring.datasource.username=stockcontrol
-spring.datasource.password=Wu6jJOH8sfw5K4Fii1AtcsJC67uQ5uBj
+spring.datasource.url=jdbc:postgresql://aws-0-us-west-2.pooler.supabase.com:5432/postgres?sslmode=require
+spring.datasource.username=postgres.lstdqbwvayzrrbamgngi
+spring.datasource.password=$F8C4m+jYt.xn@H
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
