--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://aws-0-us-west-2.pooler.supabase.com:5432/postgres?sslmode=require
-spring.datasource.username=postgres.lstdqbwvayzrrbamgngi
-spring.datasource.password=$F8C4m+jYt.xn@H
+spring.datasource.username=postgres.yoyiihcvzveqiobospxe
+spring.datasource.password=DoRcC27HE6bTPYI3
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -9,5 +9,3 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jackson.default-property-inclusion=non_null
-
-server.port=${PORT:8080}
